--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   package_info_plus: ^3.0.3
   flutter_svg: ^2.0.2
   google_fonts: ^4.0.3
+  #statemanagement
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
