--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,17 @@ dependencies:
   google_fonts: ^4.0.3
   #statemanagement
   flutter_bloc: ^8.1.3
+  sqflite: ^2.3.2
+  path_provider: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+
+  build_runner: ^2.4.8
 
 
 flutter:
